--- a/Missing Data Imputation/missing_data_imputation.ipynb
+++ b/Missing Data Imputation/missing_data_imputation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnoUIpOCqILu+iy9E8K0eJ",
+      "authorship_tag": "ABX9TyPhFW1yQJ3XGqldbyqvVWfP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,15 +61,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gdWA8dAwnLiq",
-        "outputId": "b25d71e2-3751-4791-c0fb-c5d8fe009c4b"
+        "outputId": "dabc39f0-c3c1-42a5-aa8c-064d97c53fcd"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "JCa-Twi9nbXN"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -98,9 +98,9 @@
           "height": 236
         },
         "id": "aP4-I6MFoSbp",
-        "outputId": "30bc6906-cbad-4aef-c116-802e5b768cd6"
+        "outputId": "b1daa9ab-4463-49c3-d12e-d8dbd074407f"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +131,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4fc32bdc-681c-4f90-9d5a-2c3de24cf3d2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-46048361-af5b-489c-80ba-c09e0703b1cc\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -301,7 +301,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4fc32bdc-681c-4f90-9d5a-2c3de24cf3d2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-46048361-af5b-489c-80ba-c09e0703b1cc')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -353,12 +353,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4fc32bdc-681c-4f90-9d5a-2c3de24cf3d2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-46048361-af5b-489c-80ba-c09e0703b1cc button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4fc32bdc-681c-4f90-9d5a-2c3de24cf3d2');\n",
+              "        const element = document.querySelector('#df-46048361-af5b-489c-80ba-c09e0703b1cc');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -378,8 +378,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-126168af-283e-4736-8e32-26ec1b8da75b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-126168af-283e-4736-8e32-26ec1b8da75b')\"\n",
+              "<div id=\"df-0b0aa290-d1c9-4cfb-b771-8b1961b54ec5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0b0aa290-d1c9-4cfb-b771-8b1961b54ec5')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -430,7 +430,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-126168af-283e-4736-8e32-26ec1b8da75b button');\n",
+              "        document.querySelector('#df-0b0aa290-d1c9-4cfb-b771-8b1961b54ec5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -441,7 +441,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 4
         }
       ]
     },
@@ -455,9 +455,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iXXsClt7oanu",
-        "outputId": "d56e4b69-e24d-4d79-e640-6c5114b2ab91"
+        "outputId": "501e7535-1234-485d-f641-89123202e41a"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +484,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -508,7 +508,7 @@
       "metadata": {
         "id": "vBMkrxXYod5_"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -523,9 +523,9 @@
           "height": 206
         },
         "id": "fxDJwYvOsKz4",
-        "outputId": "4de9f188-b0e3-4b09-98e7-68f45843bfa3"
+        "outputId": "2dad1e8f-aab2-4e22-89b2-cccff9e59517"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -547,7 +547,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-449eca4e-60b0-4777-be63-636041932096\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8b93c90f-08a1-4ff0-b840-5f44d96e3940\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -650,7 +650,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-449eca4e-60b0-4777-be63-636041932096')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8b93c90f-08a1-4ff0-b840-5f44d96e3940')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -702,12 +702,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-449eca4e-60b0-4777-be63-636041932096 button.colab-df-convert');\n",
+              "        document.querySelector('#df-8b93c90f-08a1-4ff0-b840-5f44d96e3940 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-449eca4e-60b0-4777-be63-636041932096');\n",
+              "        const element = document.querySelector('#df-8b93c90f-08a1-4ff0-b840-5f44d96e3940');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -727,8 +727,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f1374e13-591a-43ff-903b-cb39ce1d93b5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f1374e13-591a-43ff-903b-cb39ce1d93b5')\"\n",
+              "<div id=\"df-4db25d48-c6f2-4810-b38d-1cac9d89f43e\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4db25d48-c6f2-4810-b38d-1cac9d89f43e')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -779,7 +779,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f1374e13-591a-43ff-903b-cb39ce1d93b5 button');\n",
+              "        document.querySelector('#df-4db25d48-c6f2-4810-b38d-1cac9d89f43e button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -790,7 +790,48 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Separate the data in features and labels\n",
+        "X = df.drop(labels=[\"SalePrice\"], axis=1)\n",
+        "y = df[\"SalePrice\"]"
+      ],
+      "metadata": {
+        "id": "vEKfYkTisRKl"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Separate the data in training and testing set\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.3, random_state=0)\n",
+        "X_train.shape, X_test.shape"
+      ],
+      "metadata": {
+        "id": "PmOZslKsxvRw",
+        "outputId": "e7d56868-421d-4eaa-b4a1-5609576c91ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1022, 9), (438, 9))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     },
@@ -798,7 +839,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "vEKfYkTisRKl"
+        "id": "t-rxoOceyFYZ"
       },
       "execution_count": null,
       "outputs": []
