--- a/Missing Data Imputation/missing_data_imputation.ipynb
+++ b/Missing Data Imputation/missing_data_imputation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgN3Vn7NYqLzCWIQ4PlKbm",
+      "authorship_tag": "ABX9TyMHYS8KkSrvElOCl43e8zrv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2216,11 +2216,11 @@
         "data.columns"
       ],
       "metadata": {
-        "id": "zKcI3S-lzAeU",
-        "outputId": "ce6b51f3-a697-4d65-92df-ba6ce7db2337",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zKcI3S-lzAeU",
+        "outputId": "ce6b51f3-a697-4d65-92df-ba6ce7db2337"
       },
       "execution_count": 40,
       "outputs": [
@@ -2285,12 +2285,12 @@
         "df_final.head()"
       ],
       "metadata": {
-        "id": "sjlEVULQ0doP",
-        "outputId": "b5e43e33-fb76-4d52-d785-cfb98ae8a72b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "sjlEVULQ0doP",
+        "outputId": "b5e43e33-fb76-4d52-d785-cfb98ae8a72b"
       },
       "execution_count": 42,
       "outputs": [
@@ -2594,11 +2594,11 @@
         "X_train.shape, X_test.shape"
       ],
       "metadata": {
-        "id": "khWvwz-v1Dhl",
-        "outputId": "ed9760e5-5188-4fc8-ed85-27c25af11f82",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "khWvwz-v1Dhl",
+        "outputId": "ed9760e5-5188-4fc8-ed85-27c25af11f82"
       },
       "execution_count": 44,
       "outputs": [
@@ -2616,9 +2616,118 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Capture numerical variables\n",
+        "vars_num = list(X_train.select_dtypes(include=\"number\").columns)\n",
+        "vars_num"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xtYyIILV1T97",
+        "outputId": "a7e73391-b33f-4800-9812-b61559b72e78"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['OverallQual',\n",
+              " 'TotalBsmtSF',\n",
+              " '1stFlrSF',\n",
+              " 'GrLivArea',\n",
+              " 'WoodDeckSF',\n",
+              " 'BsmtUnfSF',\n",
+              " 'LotFrontage',\n",
+              " 'MasVnrArea',\n",
+              " 'GarageYrBlt']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Capture categorical variables\n",
+        "vars_cat = list(X_train.select_dtypes(exclude=\"number\").columns)\n",
+        "vars_cat"
+      ],
+      "metadata": {
+        "id": "xd8A2dQN2NUd",
+        "outputId": "f6e7da49-5bfc-42ac-d4ea-fcbe29e25350",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['BsmtQual', 'FireplaceQu']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create the imputation dictionary\n",
+        "\n",
+        "# median imputation for numeric\n",
+        "imputation_dict = X_train[vars_num].median().to_dict()\n",
+        "\n",
+        "# add mode imputation for categoric\n",
+        "imputation_dict.update(X_train[vars_cat].mode().iloc[0].to_dict())\n",
+        "\n",
+        "# show the final imputation dictinary\n",
+        "imputation_dict"
+      ],
+      "metadata": {
+        "id": "J6jysjZR2g6Q",
+        "outputId": "459c4ea9-05f7-4afe-be1d-d7f562d5924c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'OverallQual': 6.0,\n",
+              " 'TotalBsmtSF': 992.0,\n",
+              " '1stFlrSF': 1095.0,\n",
+              " 'GrLivArea': 1479.0,\n",
+              " 'WoodDeckSF': 0.0,\n",
+              " 'BsmtUnfSF': 486.5,\n",
+              " 'LotFrontage': 69.0,\n",
+              " 'MasVnrArea': 0.0,\n",
+              " 'GarageYrBlt': 1979.0,\n",
+              " 'BsmtQual': 'TA',\n",
+              " 'FireplaceQu': 'Gd'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xtYyIILV1T97"
+        "id": "XEI8QwXz32f1"
       },
       "execution_count": null,
       "outputs": []
