--- a/Missing Data Imputation/missing_data_imputation.ipynb
+++ b/Missing Data Imputation/missing_data_imputation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0U9g1lO+3PAK7k+PwXHoA",
+      "authorship_tag": "ABX9TyMNRAfbLI3tLHRrERUsEhjz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2613,11 +2613,11 @@
       ],
       "metadata": {
         "id": "XEI8QwXz32f1",
-        "outputId": "8a754119-7213-4730-84e6-46bc12dfc888",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "outputId": "8a754119-7213-4730-84e6-46bc12dfc888"
       },
       "execution_count": 45,
       "outputs": [
@@ -3001,11 +3001,11 @@
         "indicators"
       ],
       "metadata": {
-        "id": "YV4tba4MAFD1",
-        "outputId": "ab696425-9d81-4ab1-f67d-dd8d4d374b7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YV4tba4MAFD1",
+        "outputId": "ab696425-9d81-4ab1-f67d-dd8d4d374b7a"
       },
       "execution_count": 46,
       "outputs": [
@@ -3039,12 +3039,12 @@
         "X_train.head()"
       ],
       "metadata": {
-        "id": "StWA1DC-A2mI",
-        "outputId": "f9bfad12-f5b0-4579-8e17-9387ec731a7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 256
-        }
+        },
+        "id": "StWA1DC-A2mI",
+        "outputId": "f9bfad12-f5b0-4579-8e17-9387ec731a7b"
       },
       "execution_count": 47,
       "outputs": [
@@ -3431,11 +3431,11 @@
         "X_train.isnull().sum()"
       ],
       "metadata": {
-        "id": "pI9p-XRwCRL7",
-        "outputId": "d9cbfa88-f66d-406d-a5e9-ed6f62c77a7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pI9p-XRwCRL7",
+        "outputId": "d9cbfa88-f66d-406d-a5e9-ed6f62c77a7c"
       },
       "execution_count": 50,
       "outputs": [
@@ -3474,10 +3474,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **Missing Data Imputation Using Scikit-Learn**"
+      ],
+      "metadata": {
+        "id": "xGYyGXhkCYzZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Mean / Median Imputation with Scikit-Learn ==> SimpleImputer**\n",
+        "\n",
+        "Scikit-Learn provies a class to perform the most common data imputation\n",
+        "technique.\n",
+        "\n",
+        "The **SimpleImputer** provides basic strategies for imputing missing values, including :\n",
+        "\n",
+        "* Mean and median imputation for numerical variables\n",
+        "* Most frequent category imputation for categorical variables\n",
+        "* Arbitrary value imputation for both categorical and numerical variables\n",
+        "\n",
+        "**Advantages**\n",
+        "\n",
+        "* Simple to use if applied to the entire dataframe\n",
+        "* Fast computation (It uses Numpy for calculation)\n",
+        "* Imputes several types of values(you can indicate if the missing values are np.nan or zeroes etc)\n",
+        "\n",
+        "**Limitations**\n",
+        "\n",
+        "* Returns numpy array as default\n",
+        "* Modifies entire dataframe"
+      ],
+      "metadata": {
+        "id": "8SsZkKEPC3zD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xGYyGXhkCYzZ"
+        "id": "OZLFZ8GsPBxw"
       },
       "execution_count": null,
       "outputs": []
