--- a/Missing Data Imputation/imputation_with_gridsearch.ipynb
+++ b/Missing Data Imputation/imputation_with_gridsearch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuyTso0Ze6E7GSijn+EPpF",
+      "authorship_tag": "ABX9TyNnvtuTqSBu9clYaeYNcYmh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -560,12 +560,12 @@
         "data[categorical_features].head()"
       ],
       "metadata": {
-        "id": "pETaImaFEO8R",
-        "outputId": "75e8944d-1250-4020-a2a8-ac2d0b8e55df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236
-        }
+        },
+        "id": "pETaImaFEO8R",
+        "outputId": "75e8944d-1250-4020-a2a8-ac2d0b8e55df"
       },
       "execution_count": 8,
       "outputs": [
@@ -986,12 +986,12 @@
         "data[numerical_features].head()"
       ],
       "metadata": {
-        "id": "RFDenTGGETd_",
-        "outputId": "340e27a9-f8a7-436a-e5e5-6f5784d366b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 256
-        }
+        },
+        "id": "RFDenTGGETd_",
+        "outputId": "340e27a9-f8a7-436a-e5e5-6f5784d366b6"
       },
       "execution_count": 9,
       "outputs": [
@@ -1415,9 +1415,51 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Searate in train and test split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "                                   data.drop(labels=[\"SalePrice\"], axis=1),\n",
+        "                                   data[\"SalePrice\"],\n",
+        "                                   test_size=0.3,\n",
+        "                                   random_state=0)"
+      ],
       "metadata": {
         "id": "TSjv0QRtEZnN"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train.shape, X_test.shape"
+      ],
+      "metadata": {
+        "id": "8X3_-Z4bFCge",
+        "outputId": "1b2f57b3-5162-4055-a44a-d3859d79f877",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1022, 80), (438, 80))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HRrhlEDHFFsT"
       },
       "execution_count": null,
       "outputs": []
